# homelab-task-python

./: .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  Makefile  README.md  catalog-info.yaml  pyproject.toml
e2e/: README.md
e2e/cluster/: argo-install.yaml  httpbin.yaml  kind-config.yaml
e2e/scripts/: build.sh  down.sh  load.sh  run.sh  status.sh  up.sh
e2e/workflows/: smoke-conditional-check.yaml  smoke-context.yaml  smoke-echo.yaml  smoke-http-request.yaml  smoke-json-transform.yaml  smoke-pipeline.yaml  taskkit-base.yaml
schemas/conditional_check/: input.json  output.json
schemas/echo/: input.json  output.json
schemas/http_request/: input.json  output.json
schemas/json_transform/: input.json  output.json
schemas/webhook_notify/: input.json  output.json
scripts/: clean  tree
src/homelab_taskkit/: __init__.py  cli.py  context.py  context_rules.py  deps.py  errors.py  fanout.py  flow_control.py  io.py  messages.py  registry.py  runner.py  schema.py  testing.py
src/homelab_taskkit/clients/: __init__.py  http.py  webhook.py
src/homelab_taskkit/steps/: __init__.py
tests/: __init__.py  conftest.py  test_context.py  test_contracts.py  test_deps.py  test_fanout.py  test_flow_control.py  test_integration.py  test_messages.py
tests/clients/: test_http.py  test_webhook.py
tests/tasks/: __init__.py  test_echo.py  test_http_request.py
tests/workflow/: __init__.py  test_local_runner.py  test_models.py  test_registry.py  test_step_handlers.py  test_workflow.py
workflows/: infrastructure_smoke_test.yaml  smoke_test_params.json
(+26 files in other folders)
